--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,18 @@
+astroid==3.0.3
 contourpy==1.2.0
 cycler==0.12.1
+dill==0.3.8
 fonttools==4.48.1
+isort==5.13.2
 kiwisolver==1.4.5
 matplotlib==3.8.2
+mccabe==0.7.0
 numpy==1.26.4
 packaging==23.2
 pillow==10.2.0
+platformdirs==4.2.0
+pylint==3.0.3
 pyparsing==3.1.1
 python-dateutil==2.8.2
 six==1.16.0
+tomlkit==0.12.3
